--- a/components/admin/app/views/layouts/admin/_nav.html.haml
+++ b/components/admin/app/views/layouts/admin/_nav.html.haml
@@ -54,6 +54,13 @@
           %ul.dropdown-menu
             %li
               %a{:href => "#{buttons_path}"} Botões publicitários
+            %li
+              %a{:href => "#{buttons_path}"} Imóveis destaque
+            %li.divider
+            %li
+              %a{:href => "#{buttons_path}"} Páginas
+            %li
+              %a{:href => "#{buttons_path}"} Menus
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
           %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
