--- a/components/admin/app/views/admin/properties/index.html.haml
+++ b/components/admin/app/views/admin/properties/index.html.haml
@@ -4,6 +4,7 @@
     %br
     %small 
       Lista de imóveis cadastros
+    = link_to "adicionar imóvel", new_property_path, class: 'btn btn-xs btn-success pull-right'
 %hr/
 .panel-body
   .row  
