--- a/components/admin/app/views/admin/blocks/_form.html.haml
+++ b/components/admin/app/views/admin/blocks/_form.html.haml
@@ -17,4 +17,4 @@
   %hr/
   .row
     .col-md-12
-      = f.submit "Salvar quadra", class: 'btn btn-success', data: { disable_with: t(:disable_with)}
+      = f.submit "Salvar bloco", class: 'btn btn-success', data: { disable_with: t(:disable_with)}
