--- a/components/admin/app/views/admin/properties/index.html.haml
+++ b/components/admin/app/views/admin/properties/index.html.haml
@@ -11,18 +11,23 @@
     .col-md-12
       .row
         = simple_form_for url_for, method: :get do |f|
-          .col-md-4
+          .col-md-3
             = f.input :by_customer, label: 'Cliente', as: :select, collection: Customer.all.order(:id), label_method: :label_name, input_html: { name: 'by_customer'}, include_blank: "Todos", selected: params[:by_customer]
           .col-md-3
-            = f.submit "Filtrar lista", name: nil, class: 'btn btn-primary', style: "margin-top: 24px"
+            = f.input :by_situation, label: 'Situação', as: :select, collection: Property.situations.map {|k,v| [k.humanize, v]}, input_html: { name: 'by_situation'}, include_blank: "Todos", selected: params[:by_situation]
+          .col-md-3
+            = f.input :by_type, label: 'Tipo', as: :select, collection: Property.type_properties.map {|k,v| [k.humanize, v]}, input_html: { name: 'by_type'}, include_blank: "Todos", selected: params[:by_type]
+          .col-md-3
+            = f.submit "Filtrar lista", name: nil, class: 'btn btn-primary', style: "margin-top: 24px", data: { disable_with: t(:disable_with)}
 
   %hr/ 
   .row  
     .col-md-12
-      %table.table-properties.table.table-striped.table-hover.table-bordered.table-condensed
+      %table.table.table-striped.table-hover.table-bordered.table-condensed
         %thead 
           %tr
             %th.col-md-1 Cod.
+            %th.col-md-1 Cliente
             %th Cidade/Região
             %th Endereço
             %th Situação
@@ -33,13 +38,16 @@
           - @properties.each do |property|
             %tr
               %td.col-md-1= property.id
-              %td.col-md-2= property.block.group.address.name if property.block.present? && property.block.group.present?
-              %td.col-md-2= property.address
-              %td.col-md-2= property.situation.humanize
+              %td.col-md-1= property.customer_id
+              %td.col-md-1= property.address.name
+              %td.col-md-2= property.general_address
+              %td.col-md-1= property.situation.humanize
               %td.col-md-2= property.type_property.humanize
-              %td.col-md-1= property.status ? "sim" : "não"
-              %td.col-md-4
-                = link_to "", property_property_images_path(property), class: 'btn btn-warning glyphicon glyphicon-picture btn-xs'
-                = link_to "", edit_property_path(property), class: 'btn btn-primary glyphicon glyphicon-pencil btn-xs'
-                = link_to "", property_path(property), method: :delete, data: { confirm: t(:confirm)}, class: 'btn btn-danger glyphicon glyphicon-remove btn-xs'
-            
+              %td.col-md-1= property.status ? "Sim" : "Não"
+              %td.col-md-1
+                .btn-group
+                  %button.btn.btn-primary.dropdown-toggle.glyphicon.btn-xs.glyphicon-cog{'data-toggle' => 'dropdown', 'aria-haspopup' => 'true', 'aria-expanded' => false}
+                  %ul.dropdown-menu
+                    %li= link_to "Gerenciar imagens", property_property_images_path(property)
+                    %li= link_to "Editar imóvel",edit_property_path(property)
+                    %li= link_to "Excluir imóvel",property_path(property), method: :delete, data: { confirm: t(:confirm)}
