alterções na interface

--- a/components/client/app/views/client/property_images/_edit.html.haml
+++ b/components/client/app/views/client/property_images/_edit.html.haml
@@ -2,6 +2,6 @@
   %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
     %span{"aria-hidden" => "true"} &times;
   %h4.modal-title
-    %b Enviar mensagem
+    %b Editar imagem
 .modal-body
-  = render 'form_message'
+  = render 'form' 
