--- a/components/site/app/views/site/properties/telephone.js.haml
+++ b/components/site/app/views/site/properties/telephone.js.haml
@@ -1,2 +1,2 @@
-$("#modal .modal-content").html("#{escape_javascript(render 'telephone_content')}")
+$("#modal .modal-content").html("#{escape_javascript(render 'show_telephone')}")
 $("#modal").modal('show')
