--- a/components/client/app/views/client/properties/index.html.haml
+++ b/components/client/app/views/client/properties/index.html.haml
@@ -4,41 +4,46 @@
     %br
     %small 
       Lista de imóveis cadastros
+    = link_to "adicionar imóvel", new_property_path, class: 'btn btn-xs btn-success pull-right'
 %hr/
 .panel-body
   .row  
     .col-md-12
       .row
         = simple_form_for url_for, method: :get do |f|
-          .col-md-4
-            = f.input :by_customer, label: 'Cliente', as: :select, collection: Customer.where(id: current_user.customer_id).order(:id), label_method: :label_name, input_html: { name: 'by_customer'}, include_blank: "Todos", selected: params[:by_customer]
           .col-md-3
-            = f.input :by_project, label: 'Empreendimento', as: :select, collection: Project.where(customer_id: current_user.customer_id).order(:id), input_html: { name: 'by_project'}, include_blank: "Todos", selected: params[:by_project]
+            = f.input :by_situation, label: 'Situação', as: :select, collection: Property.situations.map {|k,v| [k.humanize, v]}, input_html: { name: 'by_situation'}, include_blank: "Todos", selected: params[:by_situation]
           .col-md-3
-            = f.submit "Filtrar lista", name: nil, class: 'btn btn-primary', style: "margin-top: 24px"
+            = f.input :by_type, label: 'Tipo', as: :select, collection: Property.type_properties.map {|k,v| [k.humanize, v]}, input_html: { name: 'by_type'}, include_blank: "Todos", selected: params[:by_type]
+          .col-md-3
+            = f.submit "Filtrar lista", name: nil, class: 'btn btn-primary', style: "margin-top: 24px", data: { disable_with: t(:disable_with)}
 
   %hr/ 
   .row  
     .col-md-12
-      %table.table-properties.table.table-striped.table-hover.table-bordered.table-condensed
+      %table.table.table-striped.table-hover.table-bordered.table-condensed
         %thead 
           %tr
             %th.col-md-1 Cod.
-            %th Nome
-            %th Cliente
-            %th Empreendimento
+            %th Cidade/Região
+            %th Endereço
             %th Situação
+            %th Tipo
+            %th Ativo?
             %th Ação
         %tbody
           - @properties.each do |property|
             %tr
               %td.col-md-1= property.id
-              %td.col-md-3= property.name
-              %td.col-md-2= property.customer.label_name
-              %td.col-md-3= property.project.name
-              %td.col-md-1= property.status ? "ativo" : "inativo"
-              %td.col-md-2
-                = link_to "", property_path(property), class: 'btn btn-success glyphicon glyphicon-share-alt btn-xs'
-                = link_to "", edit_property_path(property), class: 'btn btn-primary glyphicon glyphicon-pencil btn-xs'
-                = link_to "", property_path(property), method: :delete, data: { confirm: t(:confirm)}, class: 'btn btn-danger glyphicon glyphicon-remove btn-xs'
-            
+              %td.col-md-1= property.address.name
+              %td.col-md-2= property.general_address
+              %td.col-md-2= property.situation.humanize
+              %td.col-md-2= property.type_property.humanize
+              %td.col-md-1= property.status ? "Sim" : "Não"
+              %td.col-md-1
+                .btn-group
+                  %button.btn.btn-primary.dropdown-toggle.glyphicon.btn-xs.glyphicon-cog{'data-toggle' => 'dropdown', 'aria-haspopup' => 'true', 'aria-expanded' => false}
+                  %ul.dropdown-menu
+                    %li= link_to "Gerenciar imagens", property_property_images_path(property)
+                    %li= link_to "Editar imóvel",edit_property_path(property)
+                    %li= link_to "Excluir imóvel",property_path(property), method: :delete, data: { confirm: t(:confirm)}
