--- a/components/admin/app/views/admin/addresses/_index.html.haml
+++ b/components/admin/app/views/admin/addresses/_index.html.haml
@@ -1,5 +1,6 @@
 - @addresses.each do |address|
   %tr
+    %td.col-md-1= address.id
     %td= address.name
     %td= address.region
     %td.col-md-2
