--- a/components/admin/app/views/admin/addresses/index.html.haml
+++ b/components/admin/app/views/admin/addresses/index.html.haml
@@ -12,6 +12,7 @@
       %table.table.table-striped.table-hover.table-bordered
         %thead 
           %tr
+            %th Cod.
             %th Nome
             %th Região
             %th Ação
