--- a/components/admin/app/views/admin/groups/index.html.haml
+++ b/components/admin/app/views/admin/groups/index.html.haml
@@ -22,6 +22,7 @@
       %table.table.table-striped.table-hover.table-bordered
         %thead 
           %tr
+            %th Cod.
             %th Nome
             %th 360 Tour
             %th Ação
