--- a/components/site/app/views/site/properties/show.html.haml
+++ b/components/site/app/views/site/properties/show.html.haml
@@ -8,7 +8,7 @@
           %h1.property-title
             = @property.name
             %small
-              = "#{@property.general_address} - Nº #{@property.number}"
+              = "#{@property.address_name}"
           .property-featured.clearfix
             .images
               .caroufredsel-wrap
