--- a/components/site/app/assets/stylesheets/site/application.css
+++ b/components/site/app/assets/stylesheets/site/application.css
@@ -9,4 +9,5 @@
  *= require site/citilights-shortcode
  *= require site/color-custom
  *= require site/custom
+ *= require site/bootstrap-social.min
  */
